--- a/src/style.css
+++ b/src/style.css
@@ -1,12 +1,22 @@
-.name {
+.namem {
     text-align: center;
-    color: white;
-    background-color: teal;
+    color: blue;
+    background-color: lightblue;
     width: 100px;
     height: 30px;
-    margin: 5px 10px;
+    margin: 5px;
     border-radius: 10%;
 }
+.namef {
+    text-align: center;
+    color: purple;
+    background-color: pink;
+    width: 100px;
+    height: 30px;
+    margin: 5px;
+    border-radius: 10%;
+}
+
 .names {
     background-color: white;
     display: flex;
@@ -14,5 +24,5 @@
     flex-wrap: wrap;
     width: 1200px;
     height: 1000px;
-    margin: 10px auto;
+    margin: 0px auto;
 }
