--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,14 @@
+.header {
+  text-align: center;
+  width: 1200px;
+  margin: 0px auto;
+}
+.navbar {
+  text-align: center;
+  width: 1200px;
+  margin: 0px auto;
+}
+
 .namem {
   text-align: center;
   color: blue;
